update cart ui and make seperate route

--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -23,9 +23,11 @@
     <div id="progressBar"></div>
     <script src="../Scrollbar/scrollbar.js"></script>
 
-    <div class="cart">
-      <img class="cart-image" src="../images/cart.png" alt="Cart Image">
-    </div>
+    <a href="cart.html">
+      <div class="cart">
+        <img class="cart-image" src="../images/cart.png" alt="Cart Image">
+      </div>
+    </a>
     <div class="notify">
 
     </div>
@@ -537,7 +539,7 @@
       </div>
     </div>
 
-    <div class="mini-cart" id="mini-cart">
+    <div class="mini-cart" style="display: none;" id="mini-cart">
         <h1><center>CART</center></h1>
         <ul id="cart-items"></ul>
         <br>
