--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -23,11 +23,9 @@
     <div id="progressBar"></div>
     <script src="../Scrollbar/scrollbar.js"></script>
 
-    <a href="cart.html">
       <div class="cart">
         <img class="cart-image" src="../images/cart.png" alt="Cart Image">
       </div>
-    </a>
     <div class="notify">
 
     </div>
@@ -539,15 +537,17 @@
       </div>
     </div>
 
-    <div class="mini-cart" style="display: none;" id="mini-cart">
-        <h1><center>CART</center></h1>
+    <div class="mini-cart" id="mini-cart">
+        <h1 style="display: flex; font-size: 30px; font-weight: 800; justify-content: center;"><center>CART</center></h1>
         <ul id="cart-items"></ul>
         <br>
-        <center><a href="./checkout.html">
-          <button id="checkout" >Checkout</button>
+        <div class="" style="margin-top: 26%;">
+          <center><a href="./checkout.html">
+            <button id="checkout" >Checkout</button>
+          </a></center>
+          <center><h2>Total price : ₹<span id="dyna">0</span></h2></center>
+        </div>
 
-        </a></center>
-        <center><h2>Total price : <span id="dyna">0</span></h2></center>
     </div>
     <br /><br /><br /><br />
     <br /><br /> <br /><br /><br /><br />
