added feedback image

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
   <div class="popup-content">
     <h2>Thank You for your Feedback!💚</h2>
     <div class="popup-icon">
-      <img src="/images/feedback-tick.png" alt="✅" height="160" width="180">
+      <img src="./images/feedback-tick.png" alt="✅" height="160" width="180">
     </div>
     <p class="pop-para">Your feedback has been received!<br> We appreciate the input you provide.</p>
     <button class="popup-button" onclick="closePopup()">Back to Home</button>
