Revert "Cart UI Transition Added"

--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -24,19 +24,6 @@
     <script src="../Scrollbar/scrollbar.js"></script>
 
     <div class="cart">
-          <!-- MINI CART CODE -->
-
-    <div class="mini-cart" id="mini-cart">
-      <h1><center>CART</center></h1>
-      <ul id="cart-items"></ul>
-      <br>
-      <center>
-        <a href="./checkout.html">
-          <button id="checkout" >Checkout</button>
-        </a>
-      </center>
-      <center><h2>Total price : <span id="dyna">0</span></h2></center>
-  </div>
       <img class="cart-image" src="../images/cart.png" alt="Cart Image">
     </div>
     <div class="notify">
@@ -550,6 +537,16 @@
       </div>
     </div>
 
+    <div class="mini-cart" id="mini-cart">
+        <h1><center>CART</center></h1>
+        <ul id="cart-items"></ul>
+        <br>
+        <center><a href="./checkout.html">
+          <button id="checkout" >Checkout</button>
+
+        </a></center>
+        <center><h2>Total price : <span id="dyna">0</span></h2></center>
+    </div>
     <br /><br /><br /><br />
     <br /><br /> <br /><br /><br /><br />
     <br /><br /><br /><br />
