Added Contributor Page

--- a/FAQS/faqpage.html
+++ b/FAQS/faqpage.html
@@ -60,9 +60,6 @@
         <a href="../index.html#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
-        <a href="../Contributors/contributor.html" id="nav--contact">
-          <i class="fa fa-user"></i> Contributor
-        </a>
         <a href="../buyproducts/buy_products.html"
           ><i class="fa fa-shopping-cart"></i>Buy Products</a
         >
@@ -365,6 +362,9 @@
           </li>
           <li>
             <a href="../buyproducts/buy_products.html"><p>Buy Products</p></a>
+          </li>
+          <li>
+            <a href="../Contributors/contributor.html"><p>Contributor</p></a>
           </li>
         </ul>
       </div>
