--- a/index.html
+++ b/index.html
@@ -104,9 +104,6 @@
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
-        <a href="../Contributors/contributor.html" id="nav--contact">
-          <i class="fa fa-user"></i> Contributor
-        </a>
         <a href="./buyproducts/buy_products.html"
           ><i class="fa fa-shopping-cart"></i>Buy Products</a
         >
@@ -689,6 +686,9 @@
           </li>
           <li>
             <a href="./buyproducts/buy_products.html"><p>Buy Products</p></a>
+          </li>
+          <li>
+            <a href="../Contributors/contributor.html"><p>Contributor</p></a>
           </li>
         </ul>
       </div>
