feat-adding-rupee-icon

--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -103,7 +103,7 @@
         <div class="info">
           <h3>BALER-Hay & Forage Equipment</h3>
           <br />
-          <p>Rupee 9,000</p>
+          <p>₹ 9,000</p>
           <br />
           <button
             onclick="show()"
@@ -124,7 +124,7 @@
         <div class="info">
           <h3>ELECTRIC LAWN MOWERS-56 Volt 21 in.</h3>
           <br />
-          <p>Rupee 12,000</p>
+          <p>₹ 12,000</p>
           <br />
           <button
             onclick="show()"
@@ -145,7 +145,7 @@
         <div class="info">
           <h3>PESTICIDE SPRAY BOTTLES- 30 litre</h3>
           <br />
-          <p>Rupee 2,000 (set of 3)</p>
+          <p>₹ 2,000 (set of 3)</p>
           <br />
           <button
             onclick="show()"
@@ -166,7 +166,7 @@
         <div class="info">
           <h3>FRUIT PLUCKER</h3>
           <br />
-          <p>Rupee 800</p>
+          <p>₹ 800</p>
           <br />
           <button
             onclick="show()"
@@ -187,7 +187,7 @@
         <div class="info">
           <h3>RUBBER HAND GLOVES</h3>
           <br />
-          <p>Rupee 400 (1 set of pair)</p>
+          <p>₹ 400 (1 set of pair)</p>
           <br />
           <button
             onclick="show()"
@@ -208,7 +208,7 @@
         <div class="info">
           <h3>BIG TORCH LIGHT (HAND TORCH)</h3>
           <br />
-          <p>Rupee 1,500</p>
+          <p>₹ 1,500</p>
           <br />
           <button
             onclick="show()"
@@ -229,7 +229,7 @@
         <div class="info">
           <h3>WOLF GARDEN 7 TOOL SET</h3>
           <br />
-          <p>Rupee 3,500</p>
+          <p>₹ 3,500</p>
           <br />
           <button
             onclick="show()"
@@ -249,7 +249,7 @@
         />
         <div class="info">
           <h3>BALWAAN MANUAL AGRICULTURAL SEEDER</h3>
-          <p>Rupee 4,600</p>
+          <p>₹ 4,600</p>
           <br />
           <button
             onclick="show()"
@@ -270,7 +270,7 @@
         <div class="info">
           <h3>SOIL CRUMBLER TOOL</h3>
           <br />
-          <p>Rupee 2,700</p>
+          <p>₹ 2,700</p>
           <br />
           <button
             onclick="show()"
@@ -291,7 +291,7 @@
         <div class="info">
           <h3>EARTH AUGER BIT</h3>
           <br />
-          <p>Rupee 1,500</p>
+          <p>₹ 1,500</p>
           <br />
           <button
             onclick="show()"
@@ -312,7 +312,7 @@
         <div class="info">
           <h3>NEPTUNE PRESSURE HOSE</h3>
           <br />
-          <p>Rupee 4,900</p>
+          <p>₹ 4,900</p>
           <br />
           <button
             onclick="show()"
@@ -333,7 +333,7 @@
         <div class="info">
           <h3>NEPTUNE POWER SPRAYERS</h3>
           <br />
-          <p>Rupee 6,000</p>
+          <p>₹ 6,000</p>
           <br />
           <button
             onclick="show()"
@@ -354,7 +354,7 @@
         <div class="info">
           <h3>NEPTUNE CHAINSAW MACHINE</h3>
           <br />
-          <p>Rupee 15,000</p>
+          <p>₹ 15,000</p>
           <br />
           <button
             onclick="show()"
@@ -375,7 +375,7 @@
         <div class="info">
           <h3>CORIANDER SEEDS</h3>
           <br />
-          <p>Rupee 400 per KG</p>
+          <p>₹ 400 per KG</p>
           <br />
           <button
             onclick="show()"
@@ -396,7 +396,7 @@
         <div class="info">
           <h3>BOTTLE GOURD SEEDS</h3>
           <br />
-          <p>Rupee 200 per KG</p>
+          <p>₹ 200 per KG</p>
           <br />
           <button
             onclick="show()"
@@ -417,7 +417,7 @@
         <div class="info">
           <h3>HYBRID CHILLI SEEDS (GREEN CHILLI)</h3>
           <br />
-          <p>Rupee 550 KG</p>
+          <p>₹ 550 KG</p>
           <br />
           <button
             onclick="show()"
@@ -438,7 +438,7 @@
         <div class="info">
           <h3>HYBRID BRINJAL SEEDS</h3>
           <br />
-          <p>Rupee 400 per KG</p>
+          <p>₹ 400 per KG</p>
           <br />
           <button
             onclick="show()"
@@ -459,7 +459,7 @@
         <div class="info">
           <h3>BIOFIT SOIL ENHANCEMENT</h3>
           <br />
-          <p>Rupee 500</p>
+          <p>₹ 500</p>
           <br />
           <button
             onclick="show()"
@@ -480,7 +480,7 @@
         <div class="info">
           <h3>BIOFIT CULTURE BANNER</h3>
           <br />
-          <p>Rupee 300</p>
+          <p>₹ 300</p>
           <br />
           <button
             onclick="show()"
@@ -501,7 +501,7 @@
         <div class="info">
           <h3>SLURRY BUGS</h3>
           <br />
-          <p>Rupee 399</p>
+          <p>₹ 399</p>
           <br />
           <button
             onclick="show()"
@@ -522,7 +522,7 @@
         <div class="info">
           <h3>FERTILISERS NATURAL LAWN FOOD</h3>
           <br />
-          <p>Rupee 1,300</p>
+          <p>₹ 1,300</p>
           <br />
           <button
             onclick="show()"
