--- a/login/login.html
+++ b/login/login.html
@@ -61,7 +61,9 @@
         >
       </nav>
     </header>
-
+    <div id="success-banner" class="success-banner" style="display: none;">
+      <p id="banner-text"></p>
+    </div>
     <div class="container" id="container">
       <div class="form-container sign-up">
         <form>
