--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
       </div>
     </section>
-
+<div class="separation"></div>
     <section class="resource" id="Resource Library">
       <h2 class="heading">Resource<span> Library</span></h2>
       <br />
@@ -292,7 +292,7 @@
         </div>
       </div>
     </section>
-
+<div class="separation"></div>
     <!-- Testimonials Section -->
     <h1 id="testi">OUR TESTIMONIALS</h1>
     <div class="wrapper">
@@ -373,7 +373,7 @@
           <button id="review-btn">Give feedback</button>
         </div>
     </section>
-
+<div class="separation"></div>
     <!-- Modal -->
     <div id="modal" class="modal fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center" style="display: none;">
       <div class="modal-content bg-white p-6 rounded shadow-lg relative">
