--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -102,7 +102,7 @@
         <div class="info">
           <h3>BALER-Hay & Forage Equipment</h3>
           <br />
-          <p>Rupee 9,000</p>
+          <p>₹ 9,000</p>
           <br />
           <button
             onclick="show()"
@@ -123,7 +123,7 @@
         <div class="info">
           <h3>ELECTRIC LAWN MOWERS-56 Volt 21 in.</h3>
           <br />
-          <p>Rupee 12,000</p>
+          <p>₹ 12,000</p>
           <br />
           <button
             onclick="show()"
@@ -144,7 +144,7 @@
         <div class="info">
           <h3>PESTICIDE SPRAY BOTTLES- 30 litre</h3>
           <br />
-          <p>Rupee 2,000 (set of 3)</p>
+          <p>₹ 2,000 (set of 3)</p>
           <br />
           <button
             onclick="show()"
@@ -165,7 +165,7 @@
         <div class="info">
           <h3>FRUIT PLUCKER</h3>
           <br />
-          <p>Rupee 800</p>
+          <p>₹ 800</p>
           <br />
           <button
             onclick="show()"
@@ -186,7 +186,7 @@
         <div class="info">
           <h3>RUBBER HAND GLOVES</h3>
           <br />
-          <p>Rupee 400 (1 set of pair)</p>
+          <p>₹ 400 (1 set of pair)</p>
           <br />
           <button
             onclick="show()"
@@ -207,7 +207,7 @@
         <div class="info">
           <h3>BIG TORCH LIGHT (HAND TORCH)</h3>
           <br />
-          <p>Rupee 1,500</p>
+          <p>₹ 1,500</p>
           <br />
           <button
             onclick="show()"
@@ -228,7 +228,7 @@
         <div class="info">
           <h3>WOLF GARDEN 7 TOOL SET</h3>
           <br />
-          <p>Rupee 3,500</p>
+          <p>₹ 3,500</p>
           <br />
           <button
             onclick="show()"
@@ -248,7 +248,7 @@
         />
         <div class="info">
           <h3>BALWAAN MANUAL AGRICULTURAL SEEDER</h3>
-          <p>Rupee 4,600</p>
+          <p>₹ 4,600</p>
           <br />
           <button
             onclick="show()"
@@ -269,7 +269,7 @@
         <div class="info">
           <h3>SOIL CRUMBLER TOOL</h3>
           <br />
-          <p>Rupee 2,700</p>
+          <p>₹ 2,700</p>
           <br />
           <button
             onclick="show()"
@@ -290,7 +290,7 @@
         <div class="info">
           <h3>EARTH AUGER BIT</h3>
           <br />
-          <p>Rupee 1,500</p>
+          <p>₹ 1,500</p>
           <br />
           <button
             onclick="show()"
@@ -311,7 +311,7 @@
         <div class="info">
           <h3>NEPTUNE PRESSURE HOSE</h3>
           <br />
-          <p>Rupee 4,900</p>
+          <p>₹ 4,900</p>
           <br />
           <button
             onclick="show()"
@@ -332,7 +332,7 @@
         <div class="info">
           <h3>NEPTUNE POWER SPRAYERS</h3>
           <br />
-          <p>Rupee 6,000</p>
+          <p>₹ 6,000</p>
           <br />
           <button
             onclick="show()"
@@ -353,7 +353,7 @@
         <div class="info">
           <h3>NEPTUNE CHAINSAW MACHINE</h3>
           <br />
-          <p>Rupee 15,000</p>
+          <p>₹ 15,000</p>
           <br />
           <button
             onclick="show()"
@@ -374,7 +374,7 @@
         <div class="info">
           <h3>CORIANDER SEEDS</h3>
           <br />
-          <p>Rupee 400 per KG</p>
+          <p>₹ 400 per KG</p>
           <br />
           <button
             onclick="show()"
@@ -395,7 +395,7 @@
         <div class="info">
           <h3>BOTTLE GOURD SEEDS</h3>
           <br />
-          <p>Rupee 200 per KG</p>
+          <p>₹ 200 per KG</p>
           <br />
           <button
             onclick="show()"
@@ -416,7 +416,7 @@
         <div class="info">
           <h3>HYBRID CHILLI SEEDS (GREEN CHILLI)</h3>
           <br />
-          <p>Rupee 550 KG</p>
+          <p>₹ 550 KG</p>
           <br />
           <button
             onclick="show()"
@@ -437,7 +437,7 @@
         <div class="info">
           <h3>HYBRID BRINJAL SEEDS</h3>
           <br />
-          <p>Rupee 400 per KG</p>
+          <p>₹ 400 per KG</p>
           <br />
           <button
             onclick="show()"
@@ -458,7 +458,7 @@
         <div class="info">
           <h3>BIOFIT SOIL ENHANCEMENT</h3>
           <br />
-          <p>Rupee 500</p>
+          <p>₹ 500</p>
           <br />
           <button
             onclick="show()"
@@ -479,7 +479,7 @@
         <div class="info">
           <h3>BIOFIT CULTURE BANNER</h3>
           <br />
-          <p>Rupee 300</p>
+          <p>₹ 300</p>
           <br />
           <button
             onclick="show()"
@@ -500,7 +500,7 @@
         <div class="info">
           <h3>SLURRY BUGS</h3>
           <br />
-          <p>Rupee 399</p>
+          <p>₹ 399</p>
           <br />
           <button
             onclick="show()"
@@ -521,7 +521,7 @@
         <div class="info">
           <h3>FERTILISERS NATURAL LAWN FOOD</h3>
           <br />
-          <p>Rupee 1,300</p>
+          <p>₹ 1,300</p>
           <br />
           <button
             onclick="show()"
@@ -544,7 +544,7 @@
           <button id="checkout" >Checkout</button>
 
         </a></center>
-        <center><h2>Total price : <span id="dyna">0</span></h2></center>
+        <center><h2>Total price : ₹<span id="dyna">0</span></h2></center>
     </div>
     <br /><br /><br /><br />
     <br /><br /> <br /><br /><br /><br />
