--- a/buyproducts/checkout.html
+++ b/buyproducts/checkout.html
@@ -37,8 +37,8 @@
                 <div>
                   <p class="mb-0 fw-bold">${product}</p>
                   <p class="mb-0">Quantity: ${quantity}</p>
-                  <p class="mb-0">Price: $${price}</p>
-                  <p class="mb-0">Total: $${itemTotal.toFixed(2)}</p>
+                  <p class="mb-0">Price: ₹${price}</p>
+                  <p class="mb-0">Total: ₹${itemTotal.toFixed(2)}</p>
                 </div>
               </div>
             `;
@@ -46,7 +46,7 @@
           });
 
           // Update total price
-          dyna.textContent = `Total Price: $${totalPrice.toFixed(2)}`;
+          dyna.textContent = `Total Price: ₹${totalPrice.toFixed(2)}`;
         }
 
         // Call the updateCheckoutCart function to display initial cart items
