--- a/Contributors/contributor.html
+++ b/Contributors/contributor.html
@@ -58,9 +58,7 @@
         <a href="../index.html" class="content"
           ><i class="fa-solid fa-house"></i> Home</a
         >
-        <a href="./about.html" class="active"
-          ><i class="fa-solid fa-circle-info"></i> About</a
-        >
+        <a href="./about.html"><i class="fa-solid fa-circle-info"></i> About</a>
         <a href="../blog/blogpage.html"
           ><i class="fa-solid fa-blog"></i> Blogs</a
         >
@@ -73,10 +71,6 @@
         <a href="../index.html#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
-        <a href="../Contributors/contributor.html" id="nav--contact">
-          <i class="fa fa-user"></i> Contributor
-        </a>
-
         <a href="../buyproducts/buy_products.html"
           ><i class="fa fa-shopping-cart"></i> Buy Products</a
         >
