MAde the 'Buy Products' page responsive for mobile-view

--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -9,7 +9,8 @@
     <link
       rel="stylesheet"
       href="../cursor/style.css"
-      <link
+    />
+     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
@@ -78,10 +79,13 @@
           color: #053314;
           font-size: 50px;
           position: absolute;
+          width: max-content !important;
           top: 100px;
-          left: 550px;
+          left: 50%;
+          transform: translateX(-50%);
           text-shadow: 2px 2px 8px rgb(249, 249, 238);
         "
+        class="products-heading-fix"
       >
         Agro<span style="color: #0c891f"> Products</span>
       </h2>
