--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="../testimonials/testimonials.css" />
     <link
       rel="stylesheet"
-      href="../cursor/style.css"
+      href="../cursor/style.css"/>
       <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+        rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
