--- a/testimonials/termsandconditions.html
+++ b/testimonials/termsandconditions.html
@@ -270,12 +270,12 @@
           </script>
           by AgriLearnNetwork | All Rights Reserved
           <span class="legal-page"
-            ><a href="./testimonials/termsandconditions.html"
+            ><a href="./termsandconditions.html"
               >| Terms and Conditions</a
             ></span
           >
           <span class="legal-page"
-            ><a href="./testimonials/privacypolicy.html"
+            ><a href="./privacypolicy.html"
               >| Privacy Policy</a
             ></span
           >
