Revert "Fix Contributors issues and Enhance it"

--- a/Contributors/contributor.html
+++ b/Contributors/contributor.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Contributors | AgriLearnNetwork</title>
+    <title>About Us | AgriLearnNetwork</title>
     <style>
       :root {
         --background-color: #023b1a;
@@ -79,7 +79,7 @@
         <a href="../index.html" class="content"
           ><i class="fa-solid fa-house"></i> Home</a
         >
-        <a href="../about/about.html" 
+        <a href="./about.html" class="active"
           ><i class="fa-solid fa-circle-info"></i> About</a
         >
         <a href="../blog/blogpage.html"
@@ -94,6 +94,10 @@
         <a href="../index.html#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
+        <a href="../Contributors/contributor.html" id="nav--contact">
+          <i class="fa fa-user"></i> Contributor
+        </a>
+
         <a href="../buyproducts/buy_products.html"
           ><i class="fa fa-shopping-cart"></i> Buy Products</a
         >
@@ -103,12 +107,43 @@
       </nav>
     </header>
 
-    <div class="content min-h-screen text-black dark:text-gray-200">
-      <div class="container mx-auto py-8">
-        <h1 class="text-center text-3xl font-semibold mb-8">🤝 AgriLearnNetwork - Contributors</h1>
-        <div id="contributors" class="contributors flex flex-wrap justify-center gap-8"></div>
+    <main class="container">
+      <h1 class="heroes">Celebrating Dedication: Our Contributor Heroes</h1>
+      <div id="contributor">
+        <div id="grid">
+          <!-- Placeholder elements -->
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+          <div class="placeholder" aria-hidden="true"></div>
+
+          <!-- Add more placeholders as needed -->
+        </div>
       </div>
-    </div>
+    </main>
 
     <footer class="footer">
       <div class="footer-grid">
