--- a/buyproducts/buy_products.html
+++ b/buyproducts/buy_products.html
@@ -6,15 +6,16 @@
     <title>Agricultural Tools Store</title>
     <link rel="stylesheet" href="./buy_products.css" />
     <link rel="stylesheet" href="../testimonials/testimonials.css" />
-    <link
-      rel="stylesheet"
-
-      href="../cursor/style.css"/>
-      <link
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-        rel="stylesheet">
     <link rel="stylesheet" href="../cursor/style.css" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../cursor/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <script
       src="https://kit.fontawesome.com/b08b6de27e.js"
@@ -655,7 +656,9 @@
       </div>
     </footer>
     <div id="backtoTop">
-      <a href="#buy_products"><i class="bx bx-up-arrow-alt" id="go-to-top" title="Go to top"></i></a>
+      <a href="#buy_products"
+        ><i class="bx bx-up-arrow-alt" id="go-to-top" title="Go to top"></i
+      ></a>
     </div>
     <div class="cursor"></div>
     <div class="cursor2"></div>
