--- a/login/login.html
+++ b/login/login.html
@@ -112,6 +112,9 @@
             >Passwords don't match</span
           >
           <button type="submit" id="signup-button">Sign Up</button>
+          <div id="signup-success-banner" class="success-banner">
+            <p id="signup-banner-text">Signed up successfully</p>
+          </div>
         </form>
       </div>
 
@@ -149,11 +152,17 @@
             >Forget Your Password?</a
           >
           <button type="submit" id="signin-button">Sign In</button>
+          <div id="signin-success-banner" class="success-banner">
+            <p id="signin-banner-text">Signed in successfully</p>
+          </div>
         </form>
-        <div class="outer-banner">
+        <!-- <div class="outer-banner">
           <div id="success-banner" class="success-banner" style="display: none">
             <p id="banner-text"></p>
           </div>
+        </div> -->
+        <div id="shared-success-banner" class="success-banner">
+          <p id="shared-banner-text">Shared banner message</p>
         </div>
       </div>
 
