--- a/login/login.html
+++ b/login/login.html
@@ -53,7 +53,7 @@
       </nav>
     </header>
 
-    <div class="container" id="container">
+    <div class="container" id="container" style="margin-top: 100px">
       <div class="form-container sign-up" id="signup-form">
         <form id="signup-form">
           <h1>Create Account</h1>
